fix(jdk17): replace Java 21 List.getFirst()/getLast() in time-series and planner code
Chunk 5 cherry-picks (time-series last-point queries, order-by/where-clause
handling in SelectExecutionPlanner, sparse-vector pruning test) introduced
List.getFirst()/getLast() calls (Java 21+) on plain List<Object[]>/List<Result>/
List<OrderByItem>/List<AndBlock>/List<PaginatedSegmentReader> types. Replaced
with list.get(0)/list.get(list.size() - 1) to keep the java17 branch on
maven-compiler-plugin release 17.