@@ -364,7 +364,7 @@ public class TimeSeriesShard implements AutoCloseable {
 
       // The mutable tail alone can answer the query when it is complete and strictly newer than
       // anything already sealed: no block has to be decompressed.
-      if (mutableRows.size() >= need && (long) mutableRows.getLast()[0] > sealedStore.getGlobalMaxTimestamp())
+      if (mutableRows.size() >= need && (long) mutableRows.get(mutableRows.size() - 1)[0] > sealedStore.getGlobalMaxTimestamp())
         return mutableRows;
 
       final List<Object[]> results = sealedStore.scanRangeDescending(fromTs, toTs, columnIndices, tagFilter, limit,
